apps/entry/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: entry
spec:
  replicas: 1
  selector:
    matchLabels:
      app: entry
  template:
    metadata:
      labels:
        app: entry
    spec:                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                            [...]
      runtimeClassName: wasmtime-spin
      containers:
        - name: entry
          image: entry:latest
          command: ["/"]
---
apiVersion: v1
kind: Service
metadata:
  name: entry
spec:
  type: LoadBalancer
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  selector:
    app: entry
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: entry
  annotations:
    ingress.kubernetes.io/ssl-redirect: "false"
    kubernetes.io/ingress.class: traefik
spec:
  rules:
    - http:
        paths:
          - path: /entry
            pathType: Prefix
            backend:
              service:
                name: entry
                port:
                  number: 80
